--- a/WxHook/WxHook/WxHook.vcxproj.filters
+++ b/WxHook/WxHook/WxHook.vcxproj.filters
@@ -42,10 +42,13 @@
     <ClInclude Include="pipe.h">
       <Filter>pipe</Filter>
     </ClInclude>
-    <ClInclude Include="..\Common\LOG.h">
+    <ClInclude Include="..\Common\DebugLog.h">
       <Filter>common</Filter>
     </ClInclude>
-    <ClInclude Include="..\Common\DebugLog.h">
+    <ClInclude Include="..\Common\log4z.h">
+      <Filter>common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Common\Common.h">
       <Filter>common</Filter>
     </ClInclude>
   </ItemGroup>
@@ -62,10 +65,13 @@
     <ClCompile Include="pipe.cpp">
       <Filter>pipe</Filter>
     </ClCompile>
-    <ClCompile Include="..\Common\LOG.cpp">
+    <ClCompile Include="..\Common\DebugLog.cpp">
       <Filter>common</Filter>
     </ClCompile>
-    <ClCompile Include="..\Common\DebugLog.cpp">
+    <ClCompile Include="..\Common\log4z.cpp">
+      <Filter>common</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Common\Common.cpp">
       <Filter>common</Filter>
     </ClCompile>
   </ItemGroup>
